fix when upload image
