# src/controllers/userControllers.js
@@ -50,7 +50,6 @@ const singUp = async (req, res) => {
 };
 const login = async (req, res) => {
     try {
-        false;
         let { email, pass_word } = req.body;
         let checkLogin = await models.users.findOne({
             where: { email },
@@ -79,35 +78,42 @@ const login = async (req, res) => {
 const editUser = async (req, res) => {
     try {
         let { id: user_id } = req.params;
-        let { email, pass_word, full_name, age } = req.body;
-        let passWordHash = bcrypt.hashSync(pass_word, 10);
+        let fixData = req.body;
+        //remote undefined value
+        for (const key in fixData) {
+            if (!fixData[key]) {
+                delete fixData[key];
+            }
+        }
+        //cover pass word
+        if (fixData.pass_word) {
+            fixData.pass_word = bcrypt.hashSync(fixData.pass_word, 10);
+        }
         let checkData = await models.users.findOne({
             where: { user_id },
         });
-        if (checkData && checkData.email !== email) {
-            let checkEmail = await models.users.findOne({ where: { email } });
-            if (checkEmail) {
-                failCode(res, "", "Email đã đăng kí");
-                return;
+        if (fixData.email) {
+            let { email } = fixData;
+            if (checkData && checkData.email !== email) {
+                let checkEmail = await models.users.findOne({
+                    where: { email },
+                });
+                if (checkEmail) {
+                    failCode(res, "", "Email đã đăng kí");
+                    return;
+                }
             }
         }
         if (checkData) {
-            let data = await models.users.update(
-                {
-                    pass_word: passWordHash,
-                    full_name,
-                    age,
-                    email,
-                    avatar,
-                },
-                { where: { user_id } }
-            );
+            let data = await models.users.update(fixData, {
+                where: { user_id },
+            });
             successCode(res, data, "Tài khoản của bạn đã được cập nhật");
         } else {
             failCode(res, "", "Tài khoản không tồn tại");
         }
     } catch (error) {
-        errorCode(res, "Lỗi sever");
+        errorCode(res, error);
     }
 };
 const deleteUser = async (req, res) => {
@@ -129,14 +135,18 @@ const deleteUser = async (req, res) => {
 const avatarUser = async (req, res) => {
     const fs = require("fs");
     try {
-        let { user_id } = req.params;
+        let { id: user_id } = req.params;
         let { filename } = req.file;
+        let Url =
+            req.protocol + "://" + req.get("host") + req.originalUrl + "/";
+        let fullUrl = Url + filename;
         let checkData = await models.users.findOne({
             where: { user_id },
         });
         if (checkData) {
             let { avatar: delete_avatar } = checkData.dataValues;
             if (delete_avatar) {
+                delete_avatar = delete_avatar.replace(Url, "");
                 setTimeout(() => {
                     fs.unlinkSync(
                         process.cwd() + "/public/avatar/" + delete_avatar
@@ -144,15 +154,16 @@ const avatarUser = async (req, res) => {
                 }, 5000);
             }
             let data = await models.users.update(
-                { avatar: filename },
+                { avatar: fullUrl },
                 { where: { user_id } }
             );
             successCode(res, data, "update");
         } else {
             failCode(res, "", "Tài khoản không tồn tại");
+            fs.unlinkSync(process.cwd() + "/public/avatar/" + filename);
         }
     } catch (error) {
-        errorCode(res, "Lỗi sever");
+        errorCode(res, "lỗi");
     }
 };
 module.exports = {
